# Monopoly

./: CMakeCache.txt  CMakeLists.txt  Grid.cpp  Grid.h  README.md  binding.cpp  bindings.cpp  board.qrc  form.cpp  form.h  form.ui  gamehandler.cpp  gamehandler.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playeraction.h  propertygrid.cpp  propertygrid.h  railroadgrid.cpp  railroadgrid.h  specialgrid.cpp  surprisegrid.cpp  surprisegrid.h  taxgrid.cpp  test_grid.cpp
Testing/Temporary/fUNCTIONING/untitled/: CMakeLists.txt  Grid.cpp  gamehandler.cpp  gamehandler.h  gamemanager.h  jailgrid.cpp  monopolyboard.cpp  player.cpp  specialgrid.h  taxgrid.h  test_grid.cpp  utilitygrid.cpp
fUNCTIONING/untitled/: PointF.h  freeparkinggrid.cpp  freeparkinggrid.h  gamemanager.cpp  gotojailgrid.cpp  gotojailgrid.h  jailgrid.h  monopolyboard.h  player.h  propertygrid.cpp  railroadgrid.cpp  railroadgrid.h  surprisegrid.cpp  taxgrid.cpp  utilitygrid.h
